--- a/src/app/longterm/saletran/tender/eg-conc-tndr/eg-conc-tndr.component.html
+++ b/src/app/longterm/saletran/tender/eg-conc-tndr/eg-conc-tndr.component.html
@@ -13,10 +13,10 @@
             <tr>
                 <td style="width:50%;"></td>
                 <td style="text-align: left;">
-                    {{dcCurrSymbl}}{{tenderAmount}}
+                    {{dcCurrSymbl}}{{tenderAmountDC}}
                 </td>
                 <td style="text-align: right;">
-                    {{ndcCurrSymbl}}{{tenderAmountFC}}
+                    {{ndcCurrSymbl}}{{tenderAmountNDC}}
                 </td>
             </tr>
         </table>
