--- a/src/app/longterm/saletran/tender/concession-card-tndr/concession-card-tndr.component.html
+++ b/src/app/longterm/saletran/tender/concession-card-tndr/concession-card-tndr.component.html
@@ -1,45 +1,48 @@
 <div class="panel">
     <div class="panel-body">
-        <table class="table">
-            <tr><td style="width:50%;"></td>
-                <td style="text-align: left;">
-                    Payment Amount (default currency):
-                </td>
-                <td style="text-align: right;">
-                    Payment Amount: 
-                </td>
-            </tr>
-            <tr><td style="width:50%;"></td>
-                <td style="text-align: left;">
-                {{dcCurrSymbl}}{{tenderAmountDC}}
-                </td>
-                <td style="text-align: right;">
-                {{ndcCurrSymbl}}{{tenderAmountNDC}}
-                </td>
-            </tr>
-        </table>
-        <p class="text-center">
-            <strong>Please have the customer use the pinpad to Tap/Insert/Swipe their Credit/Debit card to complete the payment. </strong> </p>    
+        <div class="tender-amounts-container">
+            <div class="tender-amount-card">
+                <div class="tender-label">Tender Amount (Default Currency)</div>
+                <div class="tender-value dc-amount">{{dcCurrSymbl}}{{tenderAmountDC}}</div>
+            </div>
+            <div class="tender-amount-card">
+                <div class="tender-label">Tender Amount (Foreign Currency)</div>
+                <div class="tender-value fc-amount">{{ndcCurrSymbl}}{{tenderAmountNDC}}</div>
+            </div>
+        </div>
+        <div class="pinpad-waiting-section">
+            <div class="pinpad-waiting-container">
+                <div class="pinpad-message">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-credit-card"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2z" />
+                        <path d="M1 7v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7H1z" />
+                    </svg>
+                    <p class="pinpad-text">Please have the customer use your Concession Card Machine to Tap/Insert/Swipe their Credit/Debit card to complete the payment.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 <div class="footer fixed-bottom cncsnFooter">
     <div class="row">
-        <button #btnApprove class="border border-white btn btn-info btn-lg ftrbtn" id="btnApprove" aria-label="Left Align"
+        <button #btnApprove class="border border-white btn btn-info btn-lg ftrbtn" id="btnApprove" aria-label="Approve"
             (click)="btnApproveClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Approve
         </button>
-        <button #btnDecline class="border border-white btn btn-info btn-lg ftrbtn" id="btnDecline" aria-label="Left Align"
+        <button #btnDecline class="border border-white btn btn-info btn-lg ftrbtn" id="btnDecline" aria-label="Decline"
             (click)="btnDeclineClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Decline
         </button>
-        <button #btnCancel class="border border-white btn btn-info btn-lg ftrbtn" id="btnCancel" aria-label="Left Align"
+        <button #btnCancel class="border border-white btn btn-info btn-lg ftrbtn" id="btnCancel" aria-label="Cancelled"
             (click)="btnCancelClick($event)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill"
                 viewBox="0 0 16 16">
