--- a/src/app/longterm/saletran/tender/cash-tndr/cash-tndr.component.html
+++ b/src/app/longterm/saletran/tender/cash-tndr/cash-tndr.component.html
@@ -1,27 +1,17 @@
 <div class="panel">
     <div class="panel-body">
-        <table class="table">
-            <tr>
-                <td style="width:50%;"></td>
-                <td style="text-align: left;">
-                    Payment Amount (default currency):
-                </td>
-                <td style="text-align: right;">
-                    Payment Amount:
-                </td>
-            </tr>
-            <tr>
-                <td style="width:50%;"></td>
-                <td style="text-align: left;">
-                    {{dcCurrSymbl}}{{tenderAmountDC}}
-                </td>
-                <td style="text-align: right;">
-                    {{ndcCurrSymbl}}{{tenderAmountNDC}}
-                </td>
-            </tr>
-        </table>
+        <div class="tender-amounts-container">
+            <div class="tender-amount-card">
+                <div class="tender-label">Tender Amount (Default Currency)</div>
+                <div class="tender-value dc-amount">{{dcCurrSymbl}}{{tenderAmountDC}}</div>
+            </div>
+            <div class="tender-amount-card">
+                <div class="tender-label">Tender Amount (Foreign Currency)</div>
+                <div class="tender-value fc-amount">{{ndcCurrSymbl}}{{tenderAmountNDC}}</div>
+            </div>
+        </div>
         <p class="text-center">
-            <strong>Please click approve if Eagle Cash payment is approved</strong>
+            <strong>Please click approve if Cash payment is received</strong>
         </p>
     </div>
 </div>
