--- a/src/app/longterm/saletran/tender/gift-card-inquiry/gift-card-inquiry.component.html
+++ b/src/app/longterm/saletran/tender/gift-card-inquiry/gift-card-inquiry.component.html
@@ -3,11 +3,11 @@
         <div class="tender-amounts-container">
             <div class="tender-amount-card">
                 <div class="tender-label">Tender Amount (Default Currency)</div>
-                <div class="tender-value dc-amount">{{dcCurrSymbl}}{{tenderAmountDC}}</div>
+                <div class="tender-value dc-amount">{{dcCurrSymbl}}{{tenderAmountDC | number:'1.2-2'}}</div>
             </div>
             <div class="tender-amount-card">
                 <div class="tender-label">Tender Amount (Foreign Currency)</div>
-                <div class="tender-value fc-amount">{{ndcCurrSymbl}}{{tenderAmountNDC}}</div>
+                <div class="tender-value fc-amount">{{ndcCurrSymbl}}{{tenderAmountNDC | number:'1.2-2'}}</div>
             </div>
         </div>
         <div class="pinpad-waiting-section">
@@ -19,7 +19,7 @@
                             d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2z" />
                         <path d="M1 7v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7H1z" />
                     </svg>
-                    <p class="pinpad-text">Please click approve if Eagle Cash payment is approved.</p>
+                    <p class="pinpad-text">Please wait for the Gift Card Inquiry to complete.</p>
                 </div>
             </div>
         </div>
