--- a/src/app/longterm/saletran/checkout/balance-due/balance-due.component.html
+++ b/src/app/longterm/saletran/checkout/balance-due/balance-due.component.html
@@ -6,7 +6,7 @@
             <table *ngIf="allowPartPay" style="width:100%;">
                 <tr>
                     <td class="rightjustfy" style="width:66%"><label>Balance Due</label></td>
-                    <td class="rightjustfy" style="width:33%"><label>{{dfltCurrSymbl}}{{balDue}}</label></td>
+                    <td class="rightjustfy" style="width:33%"><label>{{dfltCurrSymbl}}{{balDue | number:'1.2-2'}}</label></td>
                 </tr>
             </table>
         </td>
