--- a/src/app/longterm/saletran/tender/device-tndr-page/device-tndr-page.component.html
+++ b/src/app/longterm/saletran/tender/device-tndr-page/device-tndr-page.component.html
@@ -6,11 +6,11 @@
         <div class="tender-amounts-container">
             <div class="tender-amount-card">
                 <div class="tender-label">Tender Amount (Default Currency)</div>
-                <div class="tender-value dc-amount">{{dcCurrSymbl}}{{tenderAmount}}</div>
+                <div class="tender-value dc-amount">{{dcCurrSymbl}}{{tenderAmount | number:'1.2-2'}}</div>
             </div>
             <div class="tender-amount-card">
                 <div class="tender-label">Tender Amount (Foreign Currency)</div>
-                <div class="tender-value fc-amount">{{ndcCurrSymbl}}{{tenderAmountFC}}</div>
+                <div class="tender-value fc-amount">{{ndcCurrSymbl}}{{tenderAmountFC | number:'1.2-2'}}</div>
             </div>
         </div>
         <div *ngIf="isWaitingForPinpad" class="pinpad-waiting-section">
